charts/all/todo-jws/templates/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: todos-database
  name: todos-database
spec:
  ports:
  - name: 8080-tcp
    port: 5432
    targetPort: 5432
    protocol: TCP
  internalTrafficPolicy: Cluster
  selector:
    name: todos-database
  sessionAffinity: None
  type: ClusterIP
