charts/all/todo-jws/templates/todo-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: todo-jws
  name: todo-jws
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: todo-jws
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
